# uberconf2026

./: README.md
projects/java-chat/: README.md  pom.xml
projects/java-chat/src/main/java/com/chatapp/: ChatApplication.java  ChatEngine.java  CommandProcessor.java  DisplayRenderer.java  MessageStore.java  RoomManager.java  UserManager.java
projects/java-chat/src/test/java/com/chatapp/: ChatApplicationTest.java
projects/python-chat/: README.md  pyproject.toml
projects/python-chat/src/: chat_engine.py  command_processor.py  display_renderer.py  main.py  message_store.py  room_manager.py  user_manager.py
projects/python-chat/tests/: test_chat_engine.py
projects/typescript-chat/: README.md  jest.config.js  package-lock.json  package.json
projects/typescript-chat/src/: chatEngine.ts  commandProcessor.ts  displayRenderer.ts  index.ts  messageStore.ts  roomManager.ts  types.ts  userManager.ts
projects/typescript-chat/tests/: chatEngine.test.ts
